src/test/deca/context/invalid/while/invalid_condition_while.deca
// Description:
//    Test invalid condition type in while.
//    Test rule 3.35
//
// [Begin Result]
//invalid_condition_while.deca:14:11: Condition must be of type boolean. Rule 3.29.
// [End Result]
//
// History:
//    créé le 08/01/2025

{
    int x = 10;
    while (x) {
        print("Condition non booléenne");
    }
}
